--- a/index.html
+++ b/index.html
@@ -28,13 +28,20 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h1>
-<a id="hello-world" class="anchor" href="#hello-world" aria-hidden="true"><span class="octicon octicon-link"></span></a>Hello World</h1>
 
-<h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<h2>
+<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h2>
 
-<p>Tesing content here.  More here.
-This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you're using GitHub for Mac or GitHub for Windows, simply sync your repository and you'll see the new branch.</p>
+<p>
+It helps support a patient’s ordered eating by streamlining reporting for parents of patients.  It also can help in building the habits of a lifetime of ordered eating for patients by providing a way to track meals after leaving treatment.
+</p>
+<p>This release of the app contains these features:
+<li>Home screen:  Time-of-day aware quick link to the appropriate meal.</li>
+Track screen:  Access, enter, and edit all meals for the current day and any previous days.
+Print screen:  Print out the food journal log entry for a selected day.  Or use the print preview to quickly review details for any day.
+Profile screen:  Enables setup of patient, parents, required snacks, Medicines, and Addons.  This version of the App comes set up with a placeholder patient name and parent names.
+
+</p>
 
 <h3>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
