--- a/index.html
+++ b/index.html
@@ -35,24 +35,25 @@
 <p>
 It helps support a patient’s ordered eating by streamlining reporting for parents of patients.  It also can help in building the habits of a lifetime of ordered eating for patients by providing a way to track meals after leaving treatment.
 </p>
-<p>This release of the app contains these features:
-<li>Home screen:  Time-of-day aware quick link to the appropriate meal.</li>
-Track screen:  Access, enter, and edit all meals for the current day and any previous days.
-Print screen:  Print out the food journal log entry for a selected day.  Or use the print preview to quickly review details for any day.
-Profile screen:  Enables setup of patient, parents, required snacks, Medicines, and Addons.  This version of the App comes set up with a placeholder patient name and parent names.
+<p>This release of the app contains these features:</p>
+<li><b>Home screen:</b>  Time-of-day aware quick link to the appropriate meal.</li>
+<li><b>Track screen:</b>  Access, enter, and edit all meals for the current day and any previous days.</li>
+<li><b>Print screen:</b>  Print out the food journal log entry for a selected day.  Or use the print preview to quickly review details for any day.</li>
+<li><b>Profile screen:</b>  Enables setup of patient, parents, required snacks, Medicines, and Addons.  This version of the App comes set up with a placeholder patient name and parent names.</li>
 
-</p>
+
 
 <h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Home Screen</h3>
 
-<p>We've crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
-
+<p>The home screen has a context sensitive Log Meal button that takes the parent to the current meal in a single click. The status of the current meal is also displayed.
+</p>
+<img src="images/home.png">
 <h3>
 <a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span class="octicon octicon-link"></span></a>Creating pages manually</h3>
 
 <p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
+<img src="images/BreakfastWithSelection.png">
 <h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
 
