--- a/index.html
+++ b/index.html
@@ -32,11 +32,15 @@
 <h2>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h2>
 
+<p>The Kartini Meal Plan Food Journal App was created for the internationally-known, Portland-based Kartini clinic, which specializes in treating eating disorders in adolescents.</p>
 <p>
 It helps support a patient’s ordered eating by streamlining reporting for parents of patients.  It also can help in building the habits of a lifetime of ordered eating for patients by providing a way to track meals after leaving treatment.
 </p>
+<p>
+It is available for Beta Testing in TestFlight.
+</p>
 <p>This release of the app contains these features:</p>
-<li><b>Home screen:</b>  Time-of-day aware quick link to the appropriate meal.</li>
+<li><strong>Home screen:</strong>  Time-of-day aware quick link to the appropriate meal.</li>
 <li><b>Track screen:</b>  Access, enter, and edit all meals for the current day and any previous days.</li>
 <li><b>Print screen:</b>  Print out the food journal log entry for a selected day.  Or use the print preview to quickly review details for any day.</li>
 <li><b>Profile screen:</b>  Enables setup of patient, parents, required snacks, Medicines, and Addons.  This version of the App comes set up with a placeholder patient name and parent names.</li>
@@ -50,14 +54,33 @@ It helps support a patient’s ordered eating by streamlining reporting for pare
 </p>
 <img src="images/home.png">
 <h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span class="octicon octicon-link"></span></a>Creating pages manually</h3>
+<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span class="octicon octicon-link"></span></a>Journal Entry</h3>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<p>Food item and serving information is collected for each meal or snack, along with other other patient information.
+</p>
+<p>
+This screen shows what the interface once the breakfast and fruit items have been chosen.  Note:  AddOn and Medicine cells are also displayed, with the green slider button indicating that the additional items have been consumed.
+</p>
 <img src="images/BreakfastWithSelection.png">
 <h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+    <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Track
+</h3>
 
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<p>Food item and serving information is collected for each meal or snack, along with other other patient information.
+</p>
+<p>
+
+This screen shows what the interface once the breakfast and fruit items have been chosen.  Note:  AddOn and Medicine cells are also displayed, with the green slider button indicating that the additional items have been consumed.
+</p>
+<p>
+
+
+The Track screen allows a parent to view and enter meals for an entire day or a single meal.
+</p>
+<p>
+
+Additional snack are also displayed here automatically if the patient needs them.
+</p>
 <img src="images/home.png">
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
