Couple small changes

--- a/index.html
+++ b/index.html
@@ -29,9 +29,6 @@
       <section id="main_content" class="inner">
         <h1>
 
-<h2>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h2>
-
 <p>The Kartini Meal Plan Food Journal App was created for the internationally-known, Portland-based Kartini clinic, which specializes in treating eating disorders in adolescents.</p>
 <p>
 It helps support a patient’s ordered eating by streamlining reporting for parents of patients.  It also can help in building the habits of a lifetime of ordered eating for patients by providing a way to track meals after leaving treatment.
@@ -43,7 +40,7 @@ It is available for Beta Testing in TestFlight.
 <li><strong>Home screen:</strong>  Time-of-day aware quick link to the appropriate meal.</li>
 <li><strong>Track screen:</strong>  Access, enter, and edit all meals for the current day and any previous days.</li>
 <li><strong>Print screen:</strong>  Print out the food journal log entry for a selected day.  Or use the print preview to quickly review details for any day.</li>
-<li><strong>Profile screen:</strong>  Enables setup of patient, parents, required snacks, Medicines, and Addons.  This version of the App comes set up with a placeholder patient name and parent names.</li>
+<li><strong>Profile screen:</strong>  Enables setup of patient, parents, required snacks, Medicines, and Addons.</li>
 
 
 
