--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ It is available for Beta Testing in TestFlight.
 
 <p>The home screen has a context sensitive Log Meal button that takes the parent to the current meal in a single click. The status of the current meal is also displayed.
 </p>
-<img src="images/home.png">
+<img src="images/home.png" width = "330" height = "585" align = "right" vspace="5" hspace="10">
 <h3>
 <a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span class="octicon octicon-link"></span></a>Journal Entry</h3>
 
