--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ This screen shows what the interface once the breakfast and fruit items have bee
         
         Additional snack are also displayed here automatically if the patient needs them.
         </p>
-</td><td><img src="images/BreakfastWithSelection.png" width = "330" height = "585" align = "right" vspace="5" hspace="10"></td></tr>
+</td><td><img src="images/BreakfastWithSelection.png" width = "330" height = "585" ></td></tr>
 </table>
 
     
