--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ This screen shows what the interface once the breakfast and fruit items have bee
         
         Additional snack are also displayed here automatically if the patient needs them.
         </p>
-<img src="images/BreakfastWithSelection.png" width = "330" height = "585"  align = "right"  hspace="10"></td></tr>
+<img src="images/BreakfastWithSelection.png" width = "330" height = "585"  align = "top"  hspace="10"></td></tr>
 </table>
 
     
