--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@ It is available for Beta Testing in TestFlight.
 <p>
 This screen shows what the interface once the breakfast and fruit items have been chosen.  Note:  AddOn and Medicine cells are also displayed, with the green slider button indicating that the additional items have been consumed.
 </p>
-
+<table>
+    <tr><td> </td></tr>
+</table>
 <h3>
     
     <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Track
