--- a/index.html
+++ b/index.html
@@ -81,7 +81,8 @@ This screen shows what the interface once the breakfast and fruit items have bee
         
         Additional snack are also displayed here automatically if the patient needs them.
         </p>
-<img src="images/BreakfastWithSelection.png" width = "330" height = "585"  align = "top"  hspace="10"></td></tr>
+        </td><td>
+<img src="images/BreakfastWithSelection.png" width = "330" height = "585"  align = "right"  </td></tr>
 </table>
 
     
