--- a/index.html
+++ b/index.html
@@ -45,10 +45,13 @@ It is available for Beta Testing in TestFlight.
 
 
 <h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Home Screen 7</h3>
-<img src="images/home.png" width = "330" height = "585" align = "right" vspace="5" hspace="10">
-<p>The home screen has a context sensitive Log Meal button that takes the parent to the current meal in a single click. The status of the current meal is also displayed.
-</p>
+<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Home Screen</h3>
+<table>
+    <tr><td><p>The home screen has a context sensitive Log Meal button that takes the parent to the current meal in a single click. The status of the current meal is also displayed.
+        </p> </td><td><img src="images/home.png" width = "330" height = "585" align = "right" vspace="5" hspace="10"> </td></tr>
+</table>
+
+
 
 <h3>
 <a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span class="octicon octicon-link"></span></a>Journal Entry</h3>
@@ -58,9 +61,7 @@ It is available for Beta Testing in TestFlight.
 <p>
 This screen shows what the interface once the breakfast and fruit items have been chosen.  Note:  AddOn and Medicine cells are also displayed, with the green slider button indicating that the additional items have been consumed.
 </p>
-<table>
-    <tr><td> </td></tr>
-</table>
+
 <h3>
     
     <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Track
