--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ It is available for Beta Testing in TestFlight.
 
 <h3>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Home Screen</h3>
-<table border = "0">
+<table border = "0"  height="590">
     <tr valign = "top"><td><p>The home screen has a context sensitive Log Meal button that takes the parent to the current meal in a single click. The status of the current meal is also displayed.
         </p> </td><td><img src="images/home.png" width = "330" height = "585" > </td></tr>
 </table>
