--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ This screen shows what the interface once the breakfast and fruit items have bee
     </p>
     <p>Parent Initials, Location, and Time are all editable as well.
     </p>
-   <img src="images/AfternoonSnackNoSelections.png">
+   <img src="images/AfternoonSnackNoSelections.png" width = "330" height = "585" >
             <h3>
                 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Printing
             </h3>
@@ -113,7 +113,7 @@ This screen shows what the interface once the breakfast and fruit items have bee
                 
                 <p>Profile setup is quick and easy.  Information about the patient and prescribed medicines, extra snacks and AddOns is used to tailor the meal log entry screens to the patient’s needs.
                 </p>
-                <img src="images/Profile.png">
+                <img src="images/Profile.png" width = "330" height = "585" >
 
 
       </section>
